# Aideo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: backend-plan.md  front-plan.md  reactive-dancing-shamir.md
front-demo/: demo.tsx
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  settings.rs  todo.rs
src-tauri/src/db/: mod.rs  settings_repo.rs  todo_repo.rs
src-tauri/src/models/: ai.rs  mod.rs  settings.rs  todo.rs
src-tauri/src/services/: ai_service.rs  function_call.rs  mod.rs
src/services/tauri/: ai.ts  index.ts  settings.ts  todo.ts
src/styles/: globals.css
src/types/: chat.ts  settings.ts  todo.ts
